update path user to user-info
